--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "start": "nodemon server.js",
-  "dev": "nodemon --legacy-watch server.js",
-  "deploy": "node server.js"
-},
-  
+    "start": "nodemon server.js",
+    "dev": "nodemon --legacy-watch server.js",
+    "deploy": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.4"
   },
   "devDependencies": {
