--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/system": "^7.3.6",
     "@mui/x-date-pickers": "^8.22.0",
     "axios": "^1.13.2",
+    "country-state-city": "^3.2.1",
     "material-react-table": "^3.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
