Update MongoDB connection URI and enhance error logging

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 PORT=8000
-MONGO_URI=mongodb://127.0.0.1:27017/wav_energy
+MONGO_URI=mongodb+srv://wav_user:wav123@cluster0.bltyeka.mongodb.net/wav_energy?authSource=admin
 JWT_SECRET = 6e09b4e247c45dc364989425
+
+    
